# epub-reader

./: .gitignore  README.md  SKILL.md  deploy_skill.sh  openclaw_deploy_skill.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
holo_epub_reader/: __init__.py  cli.py  doctor.py  epub.py  exit_codes.py  reader.py
scripts/: cli.py  doctor.sh  html_extract.py  parse.sh  reader.py  validate.sh
skills/epub-reader-skill/: SKILL.md
skills/epub-reader-skill/scripts/: parse.sh
tests/: test_cli.py  test_doctor.py  test_reader.py
